my-app/src/components/css/SettingsPage.css
.settingsPageTitleContainer{
	position:absolute;
	top: 3vh;
	left: 15vw;
	box-sizing: content-box;
	background-color: #FFFFFF;
	z-index: 1;
	width: 10vw;
	height: 5vh;
}

.settingsPageTitle{
	font-family: Arial Black;
    font-style: normal;
    font-weight: 900;
    font-size: 24px;
}

.settingsPageContainer{
	position: relative;
	height: 90vh;
	width: 95vw;
	border: 2px solid black;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	display: flex;
	flex-direction: column;
}

.homeButtonContainer{
	position: relative;
	width: 5vw;
	margin-right: 3vw;
	margin-left: 87vw;
	justify-content: right;
}

.emailDownloadContainer{
	display: flex;
	flex-direction: column;
	margin-left: 0vw;
	width: 70vw;
	height: 23vh;
}

.emailContainer{
	width: 50vw;
	height: 5vh;
	font-family: Arial Black;
    font-style: normal;
	margin-right: 0vw;
	margin-left: 0vw;
	margin-top: 5vh;
	margin-bottom: 2vh;
}

.emailText{
	margin-left: 0vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	margin-right: 5vw;
	width: 6vw;
}

.downloadText{
	margin-left: 0vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	margin-right: 0vw;
	width: 10vw;
}

.formContainer{
	display: flex;
	flex-direction: column;
	height: 25vh;
	width: 50vw;
	margin-top: 0vh;
}

.downloadLocationBox{
	width: 30vw;
	height: 4vh;
	margin-left: 2vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	margin-top: 0vh;
}

.downloadContainer{
	width: 50vw;
	height: 10vh;
	justify-content: left;
	font-family: Arial Black;
    font-style: normal;
	margin-right: 0vw;
	margin-left: 2vw;
	margin-top: 2vh;
	margin-bottom: 2vh;
	display: flex;
	flex-direction: row;
}

.emailInputBox{
	margin-top: 0vh;
	margin-right: 0vw;
	margin-left: auto;
	margin-bottom: auto;
	margin-left: 0vw;
	font-family: Arial;
	font-style: normal;
	font-size: 16;
	width: 30vw;
	height: 4vh;
}

.emailDownloadForm{
	margin-top: 0vh;
	width: 50vw;
	margin-left: 20vw;
}

.topButtonsContainer{
	margin-top: 0vh;
}

.contactRequestButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    align-items: center;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-top: 1vh;
	margin-left: 1vw;
	margin-right: 1vw
}

.editUsersButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0vh;
	margin-top: 0vh;
	justify-content: center;
	align-items: center;
	padding-bottom: 20px;
}

.contactRequestButton:hover, .editUsersButton:hover, .deactivateAccountButton:hover{
	transform: scale(1.1);
}

.toggleButtonsContainer{
	width: 20vw;
	margin-top: 2vh;
}

.scrapeHistoryToggle{
	height: 5vh;
	width: 15vw;
	border-radius: 10px;
	border:#000000;
}
.scrapeHistoryToggleContainer{
	width: 15vw;
}

.advancedSearchToggle{
	height: 5vh;
	width: 15vw;
	border-radius: 10px;
	border:#000000;
}
.advancedSearchToggleContainer{
	width: 15vw;
	margin-top: 1vh;
}

.emailNotifToggle{
	height: 5vh;
	width: 15vw;
	border-radius: 10px;
	border:#000000;
}
.emailNotifToggleContainer{
	margin-left: 0px;
	width: 15vw;
	margin-top: 1vh;
}

.adminSettingsPageContent{
	height: 100vh;
	width: 100vw;
	display: flex;
}

.secondRowContainer{
	display: flex;
	flex-direction: row;
	margin-top: 10vh;
}

.scrapeHistoryToggle:hover, .advancedSearchToggle:hover, .emailNotifToggle:hover{
	transform: scale(1.1);
}

.approveAccountsTitleContainer{
	box-sizing: content-box;
	background-color: #FFFFFF;
	z-index: 1;
	width: 25vw;
	height: 5vh;
	/* margin-left: 15vw; */
}

.approveAccountsTitle{
	font-family: Arial Black;
    font-style: normal;
    font-size: 16px;
	position: absolute;
	margin-top: 1vh;
	margin-left: 25vw;
	width: 20vw;
}

.approveScrollingContainer{
	position: relative;
	height: 25vh;
	width: 55vw;
	border: 2px solid black;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.approveScrollBox{
	height: 25vh;
	width: 50vw;
	border: 1px solid #ccc;
	font: 16px/26px Georgia, Garamond, Serif;
	overflow: auto;
}

.bottomButtonsContainer{
	display: flex;
	flex-direction: row;
	justify-content: center;
	margin-top: 3vh;
}

.delAppButtonsContainer{
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.deleteButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0px;
	margin-top: 1vh;
}

.approveButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 1vw;
	margin-bottom: 0px;
	margin-top: 1vh;
}

.logoutButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 1vw;
	margin-right: 20vw;
	margin-bottom: 0px;
	margin-top: 1vh;
}

.saveChangesButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    text-align: center;
    color: #FFFFFF;
    background: #0094FF;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-left: 65vw;
	margin-right: 1vw;
	margin-bottom: 0px;
	margin-top: 30vh;
}

.deactivateAccountButton{
	font-family: Arial Black;
    font-style: normal;
	font-weight: 800;
    font-size: 15px;
    line-height: 20px;
    width: 150px;
    height: 50px;
    align-items: center;
    text-align: center;
    color: #FFFFFF;
    background: #a4a7a7;
    border: 1px solid #000000;
    box-sizing: border-box;
	margin-bottom: 0px;
	margin-top: 1vh;
	margin-left: 1vw;
}


.deleteButton:hover, .approveButton:hover, .logoutButton:hover, .saveChangesButton:hover{
	transform: scale(1.1);
}

